[gd_scene load_steps=2 format=3 uid="uid://ksmbcgrvo1e8"]

[ext_resource type="Script" path="res://menus/main_menu_scene.gd" id="1_1ehjh"]

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_1ehjh")

[node name="SingleplayerButton" type="Button" parent="."]
offset_left = 203.0
offset_top = 70.0
offset_right = 538.0
offset_bottom = 122.0
text = "Singleplayer"

[node name="HostButton" type="Button" parent="."]
offset_left = 203.0
offset_top = 164.0
offset_right = 538.0
offset_bottom = 216.0
text = "Host Game
"

[node name="JoinButton" type="Button" parent="."]
offset_left = 203.0
offset_top = 259.0
offset_right = 538.0
offset_bottom = 311.0
text = "Join Game
"

[node name="IpEdit" type="LineEdit" parent="."]
offset_left = 331.0
offset_top = 328.0
offset_right = 432.0
offset_bottom = 359.0
theme_override_font_sizes/font_size = 12
placeholder_text = "Enter IP here"
